--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/inter": "^5.0.20",
+    "@fontsource/open-sans": "^5.0.29",
     "astro": "^4.14.2",
     "astro-loading-indicator": "^0.5.0",
     "bits-ui": "^0.21.13",
