--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bits-ui": "^0.21.13",
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.428.0",
+    "mode-watcher": "^0.4.1",
     "sharp": "^0.33.5",
     "svelte": "^4.2.18",
     "tailwind-merge": "^2.5.2",
