--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource-variable/lora": "^5.0.19",
     "@fontsource/inter": "^5.0.20",
+    "@fontsource/merriweather": "^5.0.14",
     "astro": "^4.14.2",
     "astro-loading-indicator": "^0.5.0",
     "bits-ui": "^0.21.13",
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.428.0",
+    "mode-watcher": "^0.4.1",
     "sharp": "^0.33.5",
     "svelte": "^4.2.18",
     "tailwind-merge": "^2.5.2",
