--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/inter": "^5.0.20",
-    "@fontsource/noto-serif": "^5.0.20",
+    "@fontsource/roboto-serif": "^5.0.14",
     "astro": "^4.14.2",
     "astro-loading-indicator": "^0.5.0",
     "bits-ui": "^0.21.13",
