--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bits-ui": "^0.21.13",
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.428.0",
+    "mdast-util-to-string": "^4.0.0",
     "mode-watcher": "^0.4.1",
+    "reading-time": "^1.5.0",
     "sharp": "^0.33.5",
     "svelte": "^4.2.18",
     "tailwind-merge": "^2.5.2",
