--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "lucide-svelte": "^0.428.0",
     "mdast-util-to-string": "^4.0.0",
     "mode-watcher": "^0.4.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "reading-time": "^1.5.0",
     "sharp": "^0.33.5",
     "svelte": "^4.2.18",
