--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "postbuild": "pagefind --site dist"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
@@ -36,7 +35,6 @@
   },
   "devDependencies": {
     "@iconify/svelte": "^4.0.2",
-    "@tailwindcss/typography": "^0.5.14",
-    "pagefind": "^1.1.0"
+    "@tailwindcss/typography": "^0.5.14"
   }
 }
