--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,22 +1,24 @@
 backend:
   name: git-gateway
   branch: main
-media_folder: "/src/content/img"
-public_folder: "../img"
+media_folder: '/src/content/img'
+public_folder: '../img'
 collections:
-  - name: "articles"
-    label: "Articles"
-    folder: "src/content/articles"
+  - name: 'articles'
+    label: 'Articles'
+    folder: 'src/content/articles'
     create: true
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - label: "Tags"
-        name: "tags"
-        widget: "list"
-      - { label: "Author", name: "author", widget: "string" }
-      - { label: "Image", name: "image", widget: "image" }
-      - { label: "Publish Date", name: "pubDate", widget: "datetime" }
-      - label: "Related Articles"
-        name: "relatedArticles"
-        widget: "list"
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Description', name: 'description', widget: 'string' }
+      - { label: 'url', name: 'url', widget: 'string' }
+      - label: 'Tags'
+        name: 'tags'
+        widget: 'list'
+      - { label: 'Author', name: 'author', widget: 'string' }
+      - { label: 'Image', name: 'image', widget: 'image' }
+      - { label: 'Publish Date', name: 'pubDate', widget: 'datetime' }
+      - label: 'Related Articles'
+        name: 'relatedArticles'
+        widget: 'list'
+      - { label: 'Body', name: 'body', widget: 'markdown' }
