--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
+  repo: ifaisalabid1/techie-faisal
   branch: main
+  base_url: https://techie-faisal.pages.dev/
 media_folder: '/src/content/img'
 public_folder: '../img'
 collections:
