add github as backend in decap cms

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: git-gateway
+  name: github
   repo: ifaisalabid1/techie-faisal
   branch: main
   base_url: https://techie-faisal.pages.dev/
