--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "tinacms dev -c \"astro dev\"",
+    "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -31,13 +31,10 @@
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.10",
-    "tinacms": "^2.2.1",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@iconify/svelte": "^4.0.2",
-    "@tailwindcss/typography": "^0.5.14",
-    "@tinacms/cli": "^1.6.1",
-    "@types/node": "^22.5.0"
+    "@tailwindcss/typography": "^0.5.14"
   }
 }
