--- a/public/maintainer/config.yml
+++ b/public/maintainer/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   branch: main
   repo: ifaisalabid1/techie-faisal
+  base_url: https://techie-faisal.pages.dev/
   automatic_deployments: false
 media_folder: 'src/content/img'
 public_folder: '../img'
