--- a/public/maintainer/config.yml
+++ b/public/maintainer/config.yml
@@ -17,7 +17,11 @@ collections:
         widget: 'list'
       - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Image', name: 'image', widget: 'image' }
-      - { label: 'Publish Date', name: 'pubDate', widget: 'datetime' }
+      - label: 'Publish Date'
+        name: 'pubDate'
+        widget: 'datetime'
+        date_format: 'YYYY-MM-DD'
+        time_format: false
       - label: 'Related Articles'
         name: 'relatedArticles'
         widget: 'list'
