--- a/public/maintainer/config.yml
+++ b/public/maintainer/config.yml
@@ -1,10 +1,6 @@
 backend:
-  name: github
-  repo: ifaisalabid1/techie-faisal
+  name: git-gateway
   branch: main
-  site_domain: https://techie-faisal.pages.dev
-  base_url: https://techie-faisal.pages.dev
-  auth_endpoint: /api/auth
 media_folder: 'src/content/img'
 public_folder: '../img'
 collections:
