--- a/public/maintainer/config.yml
+++ b/public/maintainer/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
   branch: main
+  squash_merges: true
+publish_mode: editorial_workflow
 media_folder: 'src/content/img'
 public_folder: '../img'
 collections:
