--- a/public/maintaiiner/config.yml
+++ b/public/maintaiiner/config.yml
@@ -1,6 +1,9 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: ifaisalabid1/techie-faisal
   branch: main
+  base_url: https://techiefaisal.pages.dev/
+  auth_endpoint: /api/auth
   squash_merges: true
 publish_mode: editorial_workflow
 media_folder: 'src/content/img'
