--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/inter": "^5.0.20",
+    "@fontsource/dm-sans": "^5.1.0",
     "astro": "^4.15.4",
     "astro-loading-indicator": "^0.5.0",
     "bits-ui": "^0.21.13",
