--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^5.7.2",
     "@astrojs/tailwind": "^5.1.2",
-    "@fontsource/dm-sans": "^5.1.0",
+    "@fontsource-variable/open-sans": "^5.1.0",
     "astro": "^4.16.7",
     "astro-loading-indicator": "^0.5.0",
     "bits-ui": "^0.21.13",
